Update paragraph, ordered and unordered lists to have consistant spacings and always show the correct bullet styles

--- a/docs/_sass/minima/_custom.scss
+++ b/docs/_sass/minima/_custom.scss
@@ -91,7 +91,10 @@
     font-family: 'Prodigy';
 
     ul {
+        list-style: none;
         margin-top: 10px;
+        padding: 0;
+        margin: 0;
         // Opacity on hover effect
         &:hover > li {
             transition: 150ms all ease;
@@ -166,34 +169,6 @@
         }
     }
 
-}
-
-.main-content {
-    ul:not(.custom-list) {
-        list-style: disc;
-        padding-left: 25px;
-
-        & > li {
-            margin-top: 10px;
-        }
-    }
-
-    ol:not(.custom-list) {
-        list-style: auto;
-        padding-left: 25px;
-
-        & > li {
-            margin-top: 10px;
-        }
-    }
-
-    blockquote {
-        margin: 30px 0;
-
-        & > p {
-            margin:12px 0;
-        }
-    }
 }
 
 .max-width {
@@ -281,18 +256,8 @@ h5, .h5 {
         margin-bottom: 30px;
         color: $green-darkest;
     }
-    p{
-        margin-bottom: 30px;
+    p {
         color: $green-darkest;
-    }
-    ul {
-        list-style: disc;
-        padding-left: 25px;
-        margin-bottom: 30px;
-
-        & > li {
-            margin-bottom: 10px;
-        }
     }
     table {
         margin-bottom: 28px;
@@ -482,24 +447,70 @@ details {
   line-height: 1;
 }
 
-// This is a hack to fix paragraph spacing. Really the theme should be fixed.
-// See https://github.com/slsa-framework/slsa/issues/335.
-.fix-paragraph-spacing,
+.main-content,
+.markdown,
 dl.as-table {
-  p, ul, ol {
-    margin-bottom: 12px;
+  p, ul, ol, dl {
+    margin: .75rem 0;
+  }
+
+  p {
+    &:first-child {
+      margin-top: 0;
+    }
+
     &:last-child {
       margin-bottom: 0;
     }
   }
+
   h2 {
     margin-top: 4rem;
     margin-bottom: 1rem;
   }
+
   h3, h4 {
     margin-top: 2rem;
     margin-bottom: 1rem;
   }
+}
+
+.main-content,
+.markdown {
+  ul:not(.custom-list),
+  ol:not(.custom-list) {
+      padding-left: 25px;
+
+      & > li {
+          margin-bottom: 5px;
+      }
+  }
+
+  ul:not(.custom-list) {
+      list-style: disc;
+  }
+
+    ol:not(.custom-list) {
+        list-style: decimal;
+
+        ol {
+          list-style-type: lower-alpha;
+
+          ol {
+            list-style-type: lower-roman;
+          }
+        }
+    }
+}
+
+.main-content {
+    blockquote {
+        margin: 30px 0;
+
+        & > p {
+            margin:12px 0;
+        }
+    }
 }
 
 .important-messages {
